--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.16.3)
+
 project(passwordGenerator)
 
-set(CMAKE_CXX_STANDARD 11)
+include_directories(${PROJECT_SOURCE_DIR}/src)
 
-add_executable(passwordGenerator src/main.cpp src/Generator.cpp src/Generator.h)
+add_executable(${PROJECT_NAME} src/main.cpp src/Generator.cpp)
